# kontext

./: .dockerignore  .env  .env.mysql  .env.ws  .eslintrc  .gitattributes  .gitignore  .gitmodules  .hgignore  .pre-commit-config.yaml  .travis.yml  CGIPublisher.py  CHANGELOG  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.rqworker  Dockerfile.ws  Gruntfile.js  INSTALL.md  INSTALL.rst  Makefile  Makefile.am  Makefile.in  README.md  README.rst  aclocal.m4  apt-requirements.txt  conccgi.py  conclib.py  config.sample.ini  config.sample.xml  config.test.ini  configure  configure.ac  corplib.py  cypress.config.ts  dev-requirements.txt  docker-compose.cypress.yml  (+32 more)
.github/workflows/: python-typecheck.yml  pythonpackage.yml
build-scripts/: .gitignore  Dockerfile-build-and-test  Dockerfile-debug  Readme.txt  TODO  docker-compose.yml  functions.sh  run_build.sh  setup.sh  setup_defaults.sh  test.sh
build-scripts/configs/: test_config.xml
conf/: beatconfig.sample.py  celeryconfig.sample.py  config.default.xml  config.rng  config.sample.xml  corplist.default.xml  gunicorn-conf.sample.py  help_links.sample.json  main-menu.sample.json  rq-schedule-conf.sample.json
cypress/e2e/: keywords.cy.js  queryHistory.cy.js  sample.cy.js  subcorpora.cy.js  wordList.cy.js
cypress/integration/: paradigmaticQuery.js  (+4 more)
doc/: INSTALL.md  py2to3.md  uWSGI.md
dockerfiles/: Dockerfile.kontext  Dockerfile.kontext-cypress  Dockerfile.kontext-cypress-jammy  Dockerfile.kontext-dev  Dockerfile.kontext-dev-focal  Dockerfile.kontext-dev-jammy  Dockerfile.kontext-jammy  Dockerfile.kontext-mariadb  Dockerfile.kontext.cypress  Dockerfile.kontext.dev  Dockerfile.manatee  Dockerfile.manatee-jammy  Dockerfile.mariadb  Dockerfile.mariadb-cypress  Dockerfile.rqscheduler  Dockerfile.rqworker  Dockerfile.rqworker-jammy  Dockerfile.ws  Dockerfile.ws-jammy
files/: index.html
lib/: CGIPublisher.py  actions.py  argmapping.py  auth.py  backend.py  butils.py  coll_calc.py  conccache.py  conccgi.py  conclib.py  controller.py  controller.pyi  corplib.py  corplib.pyi  corptree.py  daemonize.py  db.py  dummy_auth.py  empty_corpus.py  errors.py  fallback_corpus.py  fcs.py  freq_calc.py  freq_precalc.py  gdex_old.py  initializer.py  kontext.py  kontext.pyi  kwiclib.py  kwiclib_common.py  l10n.py  languages.py  log_formatter.py  mailing.py  main_menu.py  maintenance.py  pyconc.py  query.py  query_history.py  query_storage.py  (+18 more)
public/: app.py  fcs2html.xsl  run.cgi  status_app.py  ws_app.py
scripts/: apacheconf.py  autoconf.py  cleanredis.py  config.sample.ini  config.sample.xml  create-tables-mysql.sql  create-tables-sqlite.sql  deploy.sh  encrypt.py  genconfig.py  generate_random_pwd.py  install_from_sources.sh  luigi.sh  migrate_subc_enc.py  mkcorp.py  schedule.py  stats.py  tagextract.py  update_transl.py  validate_setup.py  validate_xml.py
templates/: addlngrouplabel.tmpl  base_document.html  chart.tmpl  coll.tmpl  collocation_profiles.tmpl  collocation_profiles_form.tmpl  collx.html  collx.tmpl  compatibility.html  compatibility.tmpl  conc.tmpl  concdesc.tmpl  corplist.tmpl  corpus_detail.tmpl  corpus_details.tmpl  cpa_form.tmpl  dispersion.html  document.html  document.tmpl  error_message.tmpl  fcs.tmpl  fcs2html.tmpl  filter_form.tmpl  first_form.html  first_form.tmpl  freq.tmpl  freqs.html  freqs.tmpl  fullref.tmpl  leftmenu.tmpl  lngroupinfo.tmpl  login.tmpl  message.html  message.tmpl  query.html  query.tmpl  query_history.tmpl  raw_html.tmpl  reduce_form.tmpl  restore_conc.html  (+27 more)
tests/: butils_test.py  conclib_test.py  conf.py  config.test-2.xml  config.test.xml  kwiclib_test.py  runtests.py  settings_test.py  structures_test.py  taghelper_test.py
worker/: celery.py  general.py  rqworker.py  stderr2f.py
(+2175 files in other folders)
